// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ParticipationWithoutAccount > handles being already a participant 1`] = `
"<section class="container mx-auto">
  <div class="">
    <form>
      <p>This Mobilizon instance and this event organizer allows anonymous participations, but requires validation through email confirmation.</p>
      <transition-stub name="fade" appear="false" persisted="false" css="true">
        <article data-oruga="notification" class="o-notification o-notification--info o-notification--top">
          <!---->
          <div class="o-notification__wrapper">
            <!---->
            <div class="o-notification__content">Your email will only be used to confirm that you're a real person and send you eventual updates for this event. It will NOT be transmitted to other instances or to the event organizer.</div>
          </div>
        </article>
      </transition-stub>
      <transition-stub name="fade" appear="false" persisted="false" css="true">
        <article data-oruga="notification" class="o-notification o-notification--danger o-notification--top">
          <!---->
          <div class="o-notification__wrapper">
            <!---->
            <div class="o-notification__content">You are already a participant of this event</div>
          </div>
        </article>
      </transition-stub>
      <div data-oruga="field" class="o-field o-field--filled"><label id="v-0-0" for="anonymousParticipationEmail" class="o-field__label">Email address</label>
        <div data-oruga="input" class="o-input">
          <!----><input aria-labelledby="v-0-0" required="" id="anonymousParticipationEmail" type="email" data-oruga-input="email" class="o-input__input" autocomplete="off" placeholder="Your email">
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <p>If you want, you may send a message to the event organizer here.</p>
      <div data-oruga="field" class="o-field o-field--filled"><label id="v-0-2" for="anonymousParticipationMessage" class="o-field__label">Message</label>
        <div data-oruga="input" class="o-input o-input--textarea">
          <!----><textarea aria-labelledby="v-0-2" minlength="10" id="anonymousParticipationMessage" data-oruga-input="textarea" class="o-input__input"></textarea>
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div data-oruga="field" class="o-field">
        <!---->
        <div data-oruga="checkbox" class="o-checkbox o-checkbox--checked"><input aria-labelledby="v-0-4" id="v-0-6" type="checkbox" data-oruga-input="checkbox" class="o-checkbox__input" true-value="true" false-value="false" autocomplete="off" aria-checked="true"><label id="v-0-4" for="v-0-6" class="o-checkbox__label"><b>Remember my participation in this browser</b>
            <p>Will allow to display and manage your participation status on the event page when using this device. Uncheck if you're using a public device.</p>
          </label></div>
        <!---->
      </div>
      <div class="flex gap-2 my-2"><button data-oruga="button" type="submit" role="button" tabindex="0" class="o-button o-button--primary o-button--disabled" disabled=""><span class="o-button__wrapper"><!----><span class="o-button__label">Send email</span>
          <!----></span>
        </button><button data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--text" native-type="button"><span class="o-button__wrapper"><!----><span class="o-button__label">Back to previous page</span>
          <!----></span>
        </button></div>
    </form>
  </div>
</section>"
`;

exports[`ParticipationWithoutAccount > renders the participation without account view with minimal data 1`] = `
"<section class="container mx-auto">
  <div class="">
    <div>
      <h1 class="title">Request for participation confirmation sent</h1>
      <p class="prose dark:prose-invert"><span>Check your inbox (and your junk mail folder).</span><span class="details">Your participation will be validated once you click the confirmation link into the email.</span></p>
      <!--v-if-->
      <p class="prose dark:prose-invert">You may now close this window, or <a href="/events/f37910ea-fd5a-4756-9679-00971f3f4106" class="">return to the event's page</a>.</p>
    </div>
  </div>
</section>"
`;

exports[`ParticipationWithoutAccount > renders the warning if the event participation is restricted 1`] = `
"<section class="container mx-auto">
  <div class="">
    <div>
      <h1 class="title">Request for participation confirmation sent</h1>
      <p class="prose dark:prose-invert"><span>Check your inbox (and your junk mail folder).</span><span class="details">Your participation will be validated once you click the confirmation link into the email, and after the organizer manually validates your participation.</span></p>
      <!--v-if-->
      <p class="prose dark:prose-invert">You may now close this window, or <a href="/events/f37910ea-fd5a-4756-9679-00971f3f4106" class="">return to the event's page</a>.</p>
    </div>
  </div>
</section>"
`;
